# GazeTracking

./: .gitattributes  .gitignore  .sieveignore  68+2 landmark points.ipynb  Dockerfile  LICENSE  README.md  SECURITY.md  build_and_run.sh  calibrate_gaze.py  config.py  environment.yml  epog.py  epog_example.py  example.py  example_video.py  eye_on_window.py  eye_on_window_tracking.py  flake.nix  logging.conf  main.py  poc.py  process_video  pyproject.toml  requirements.txt  requirements_old.txt  sample_output.json  setup.py  utils.py  video_analysis.py
data/: left_23_XX_2024-07-22_10-45-39.npy  left_23_XX_2024-07-22_10-54-11.npy
gaze311/: pyvenv.cfg
gaze_tracking/: __init__.py  calibration.py  epog.py  eye.py  eyes.py  gaze_tracking.py  gazecalibration.py  iriscalibration.py  point_of_gaze.py  pupil.py  screensize.py
